punto 12, 13, de la seccion B terminados, seccion B terminada, falta dejarlo apto para presentacion

--- a/notebooks/Main_B.ipynb
+++ b/notebooks/Main_B.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 42,
    "id": "80db1157",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 43,
    "id": "62953d7c",
    "metadata": {},
    "outputs": [],
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 44,
    "id": "d87dd350",
    "metadata": {},
    "outputs": [],
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 45,
    "id": "ca5fb30b",
    "metadata": {},
    "outputs": [],
@@ -160,9 +160,9 @@
     "lista_filas_individual = new_list_i[:]\n",
     "\n",
     "aglomerados_individuos = agrupar_por_aglomerado(new_list_i,8)\n",
-    "años_trimestres_individuos = agrupar_por_anio_y_trimestre(new_list_i)\n",
+    "anios_trimestres_individuos = agrupar_por_anio_y_trimestre(new_list_i)\n",
     "\n",
-    "ultimos_individuos = obtener_ultimo_archivo(años_trimestres_individuos)\n",
+    "ultimos_individuos = obtener_ultimo_archivo(anios_trimestres_individuos)\n",
     "\n",
     "ultimos_individuos_aglomerados = agrupar_por_aglomerado(ultimos_individuos,8)\n"
    ]
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 46,
    "id": "5da67db5",
    "metadata": {},
    "outputs": [],
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 47,
    "id": "a981f232",
    "metadata": {},
    "outputs": [],
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 48,
    "id": "229ce836",
    "metadata": {},
    "outputs": [
@@ -331,7 +331,7 @@
     }
    ],
    "source": [
-    "actividad_1(años_trimestres_individuos)"
+    "actividad_1(anios_trimestres_individuos)"
    ]
   },
   {
@@ -393,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 49,
    "id": "7e2c6e15",
    "metadata": {},
    "outputs": [],
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 50,
    "id": "b1eda1b7",
    "metadata": {},
    "outputs": [],
@@ -458,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 51,
    "id": "1d81e323",
    "metadata": {},
    "outputs": [
@@ -466,14 +466,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Valores no encontrados en el diccionario\n"
+      "el porcentaje de personas extranjeras universitarias es: 0.53\n"
      ]
     }
    ],
    "source": [
     "anio_elegido = input(\"ingrese el año a buscar\")\n",
     "trimestre_elegido = input(\"ingrese el trimestre a buscar\")\n",
-    "porcentaje_ext_univ = activ2(años_trimestres_individuos,anio_elegido,trimestre_elegido)\n",
+    "porcentaje_ext_univ = activ2(anios_trimestres_individuos,anio_elegido,trimestre_elegido)\n",
     "if porcentaje_ext_univ: \n",
     "    print(f'el porcentaje de personas extranjeras universitarias es: {porcentaje_ext_univ:.2f}')"
    ]
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 52,
    "id": "e63c22ae",
    "metadata": {},
    "outputs": [],
@@ -550,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 53,
    "id": "3e646b09",
    "metadata": {},
    "outputs": [
@@ -563,7 +563,7 @@
     }
    ],
    "source": [
-    "activ_3(años_trimestres_individuos)"
+    "activ_3(anios_trimestres_individuos)"
    ]
   },
   {
@@ -587,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 54,
    "id": "cd9dc092",
    "metadata": {},
    "outputs": [],
@@ -684,7 +684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 55,
    "id": "fc004fb6",
    "metadata": {},
    "outputs": [
@@ -697,7 +697,7 @@
     }
    ],
    "source": [
-    "activ4(años_trimestres_individuos,anios_trimestres_hogares)"
+    "activ4(anios_trimestres_individuos,anios_trimestres_hogares)"
    ]
   },
   {
@@ -711,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 56,
    "id": "01e6365e",
    "metadata": {},
    "outputs": [],
@@ -746,7 +746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 57,
    "id": "d516b09d",
    "metadata": {},
    "outputs": [
@@ -804,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 58,
    "id": "7bb8411e",
    "metadata": {},
    "outputs": [],
@@ -861,7 +861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 59,
    "id": "1c81a27b",
    "metadata": {},
    "outputs": [
@@ -891,7 +891,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 60,
    "id": "00d16cc7",
    "metadata": {},
    "outputs": [],
@@ -917,7 +917,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 61,
    "id": "fbd72caf",
    "metadata": {},
    "outputs": [
@@ -976,7 +976,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 62,
    "id": "4fccbc37",
    "metadata": {},
    "outputs": [],
@@ -1013,7 +1013,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 63,
    "id": "619060ae",
    "metadata": {},
    "outputs": [
@@ -1086,7 +1086,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 64,
    "id": "8fe1e7e7",
    "metadata": {},
    "outputs": [],
@@ -1159,20 +1159,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 65,
    "id": "2229cb59",
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyError",
-     "evalue": "'l'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mKeyError\u001b[39m                                  Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[113]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m aglomerado = \u001b[38;5;28minput\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mingrese el aglomerado a buscar\u001b[39m\u001b[33m\"\u001b[39m) \n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m \u001b[43mtabla_porcentaje_secundario_incompleto\u001b[49m\u001b[43m(\u001b[49m\u001b[43maglomerados_individuos\u001b[49m\u001b[43m,\u001b[49m\u001b[43maglomerado\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[112]\u001b[39m\u001b[32m, line 6\u001b[39m, in \u001b[36mtabla_porcentaje_secundario_incompleto\u001b[39m\u001b[34m(filas_aglomerado, aglomerado)\u001b[39m\n\u001b[32m      3\u001b[39m tabla = {}\n\u001b[32m      5\u001b[39m \u001b[38;5;66;03m# Filtrar por aglomerado\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m6\u001b[39m filas_por_aglo = \u001b[43mfilas_aglomerado\u001b[49m\u001b[43m[\u001b[49m\u001b[43maglomerado\u001b[49m\u001b[43m]\u001b[49m\n\u001b[32m      7\u001b[39m \u001b[38;5;66;03m# Filtrar por mayores de edad (edad >= 18)\u001b[39;00m\n\u001b[32m      8\u001b[39m filas_filtradas = \u001b[38;5;28mlist\u001b[39m(\u001b[38;5;28mfilter\u001b[39m(\u001b[38;5;28;01mlambda\u001b[39;00m f: \u001b[38;5;28mint\u001b[39m(f[\u001b[32m13\u001b[39m]) >= \u001b[32m18\u001b[39m, filas_por_aglo, ))\n",
-      "\u001b[31mKeyError\u001b[39m: 'l'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Tabla de personas mayores de edad por nivel educativo en el aglomerado 32:\n",
+      "\n",
+      "| Año    | Trimestre |    Primario incompleto |    Primario completo |    Secundario incompleto |    Secundario completo |     Superior o universitario |\n",
+      "|--------|-----------|------------------------|----------------------|--------------------------|------------------------|------------------------------|\n",
+      "| 2023   | 3         |                  39308 |              2271963 |                   199845 |                1947317 |                      1440226 |\n",
+      "| 2023   | 4         |                  23760 |              2295928 |                   261267 |                1904134 |                      1402039 |\n",
+      "| 2024   | 1         |                  20118 |              2288673 |                   215817 |                1954208 |                      1354660 |\n",
+      "| 2024   | 2         |                  23342 |              2280445 |                   226205 |                1936745 |                      1406389 |\n"
      ]
     }
    ],
@@ -1194,7 +1197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "id": "587b6c1d",
    "metadata": {},
    "outputs": [],
@@ -1265,7 +1268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "id": "d86710f8",
    "metadata": {},
    "outputs": [
@@ -1304,7 +1307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "id": "5e84ac73",
    "metadata": {},
    "outputs": [],
@@ -1367,7 +1370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "id": "af519721",
    "metadata": {},
    "outputs": [
@@ -1399,7 +1402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 70,
    "id": "9f9d5375",
    "metadata": {},
    "outputs": [],
@@ -1448,7 +1451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 71,
    "id": "1e86ed28",
    "metadata": {},
    "outputs": [
@@ -1494,6 +1497,84 @@
    ],
    "source": [
     "activ_12(ultimos_individuos_aglomerados,ultimos_hogares_aglomerados)    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e13c3a77",
+   "metadata": {},
+   "source": [
+    "### Consulta 13\n",
+    "13. Solicitar un año al usuario y a partir de la información del último trimestre de dicho\n",
+    "ejercicio informar la cantidad de personas que hayan cursado nivel universitario o\n",
+    "superior y que vivan en una vivienda con CONDICION_DE_HABITABILIDAD\n",
+    "insuficiente"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "0a4e4dca",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def buscar_max_trimestre (anios_trimestres_hogares,anio):\n",
+    "    return max(anios_trimestres_hogares[anio].keys())\n",
+    "\n",
+    "def hogares_insuficientes_CODUSU (hogares):\n",
+    "    new_list = []\n",
+    "\n",
+    "    for elem in hogares: \n",
+    "        if elem[len(elem)-1] == \"insuficiente\": \n",
+    "            new_list.append(elem[0])\n",
+    "    \n",
+    "    return new_list\n",
+    "\n",
+    "\n",
+    "def es_universitario (elem): \n",
+    "    return elem[26] in [\"5\",\"6\"]\n",
+    "\n",
+    "def analizar_material_aglomerados (individuos, hogares , anio_ingresado):\n",
+    "    \n",
+    "    trimestre = buscar_max_trimestre(individuos,anio_ingresado)   \n",
+    "\n",
+    "    ultimos_indiv = individuos[anio_ingresado][trimestre]\n",
+    "\n",
+    "    universitarios = list(filter(lambda f : f[26] in [\"5\",\"6\"] , ultimos_indiv))\n",
+    "\n",
+    "    hogares_CODUSU = hogares_insuficientes_CODUSU(hogares[anio_ingresado][trimestre])\n",
+    "    \n",
+    "    universitarios_insuficiente = 0\n",
+    "\n",
+    "    for elem in ultimos_indiv:\n",
+    "        if elem[0] in hogares_CODUSU: \n",
+    "            universitarios_insuficiente += 1 \n",
+    "    \n",
+    "    print(f'la cantidad de universitarios que viven en un hogar insuficiente, para {anio_ingresado} trimestre {trimestre} fue:')\n",
+    "    print(f'{universitarios_insuficiente}')\n",
+    "    \n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "6aa4dd7a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "la cantidad de universitarios que viven en un hogar insuficiente, para 2023 trimestre 4 fue:\n",
+      "78\n"
+     ]
+    }
+   ],
+   "source": [
+    "anio = input(\"ingrese el año a buscar\")\n",
+    "analizar_material_aglomerados(anios_trimestres_individuos, anios_trimestres_hogares, anio)\n"
    ]
   },
   {
