--- a/notebooks/Main_B.ipynb
+++ b/notebooks/Main_B.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 1,
    "id": "62953d7c",
    "metadata": {},
    "outputs": [],
@@ -56,10 +56,16 @@
     "        grupos[aglo].append(fila)\n",
     "    return grupos\n",
     "\n",
-    "def obtener_ultimo_archivo (dict_trimestres): \n",
+    "def obtener_archivo_reciente (dict_trimestres): \n",
     "    max_anio = max(dict_trimestres.keys())\n",
     "    max_trimestre = max(dict_trimestres[max_anio].keys())\n",
     "    return dict_trimestres[max_anio][max_trimestre]\n",
+    "\n",
+    "def obtener_archivo_viejo (dict_trimestres):\n",
+    "    min_anio = min(dict_trimestres.keys())\n",
+    "    min_trimestre = min(dict_trimestres[min_anio].keys())\n",
+    "    return dict_trimestres[min_anio][min_trimestre]\n",
+    "\n",
     "    \n"
    ]
   },
@@ -140,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "id": "ca5fb30b",
    "metadata": {},
    "outputs": [],
@@ -162,7 +168,7 @@
     "aglomerados_individuos = agrupar_por_aglomerado(new_list_i,8)\n",
     "anios_trimestres_individuos = agrupar_por_anio_y_trimestre(new_list_i)\n",
     "\n",
-    "ultimos_individuos = obtener_ultimo_archivo(anios_trimestres_individuos)\n",
+    "ultimos_individuos = obtener_archivo_reciente(anios_trimestres_individuos)\n",
     "\n",
     "ultimos_individuos_aglomerados = agrupar_por_aglomerado(ultimos_individuos,8)\n"
    ]
@@ -177,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "id": "5da67db5",
    "metadata": {},
    "outputs": [],
@@ -200,7 +206,7 @@
     "aglomerados_hogares = agrupar_por_aglomerado(new_list_h,7)\n",
     "anios_trimestres_hogares = agrupar_por_anio_y_trimestre(new_list_h)\n",
     "\n",
-    "ultimos_hogares = obtener_ultimo_archivo(anios_trimestres_hogares)\n",
+    "ultimos_hogares = obtener_archivo_reciente(anios_trimestres_hogares)\n",
     "\n",
     "ultimos_hogares_aglomerados = agrupar_por_aglomerado(ultimos_hogares,7)\n"
    ]
